[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/objects/Explosion.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/shaders/planet.shader" type="Shader" id=2]
[ext_resource path="res://scenes/objects/Moon.gd" type="Script" id=3]
[ext_resource path="res://scenes/objects/moon.svg" type="Texture" id=4]
[ext_resource path="res://Sounds/MoonFlying.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/MoonRevolving.ogg" type="AudioStream" id=6]
[ext_resource path="res://scenes/objects/MoonCharging.gd" type="Script" id=7]
[ext_resource path="res://scenes/gods/Shield.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/resolution = null
shader_param/offset = Vector2( 0.5, 0.5 )
shader_param/base_color = 0.2
shader_param/random_modifier = 2.0
shader_param/greyscale = true

[sub_resource type="CircleShape2D" id=2]
radius = 31.3511

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, -3.04047, 0, 0, Vector2( 0.996914, 0 ), -0.0745684, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Curve" id=5]
max_value = 2.5
_data = [ Vector2( 0.0260708, 2.5 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("planet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("planet:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("planet:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ParticleTrail:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Moon" type="RigidBody2D" groups=[
"moon",
]]
z_index = 1
collision_layer = 17
mode = 1
linear_damp = 0.0
script = ExtResource( 3 )

[node name="planet" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="ParticleTrail" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
local_coords = false
texture = ExtResource( 4 )
gravity = Vector2( 0, 0 )
scale_amount_curve = SubResource( 3 )
color = Color( 1, 1, 1, 0.0627451 )

[node name="Explosion" parent="." instance=ExtResource( 1 )]
material = SubResource( 4 )
amount = 600
local_coords = false
direction = Vector2( 1, 1 )
spread = 60.0
scale_amount_curve = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 6 )
anims/explode = SubResource( 7 )
anims/spawn = SubResource( 8 )

[node name="MoonFlying" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound Vol"

[node name="MoonRevolving" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sound Vol"

[node name="MoonCharging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 4.0
bus = "Sound Vol"
script = ExtResource( 7 )

[node name="Shield" parent="." instance=ExtResource( 8 )]
visible = false
[connection signal="exploded" from="." to="." method="_on_Moon_exploded"]
[connection signal="moving" from="." to="." method="_on_Moon_moving"]
[connection signal="reset" from="." to="." method="_on_Moon_reset"]
[connection signal="started_moving" from="." to="." method="_on_Moon_started_moving"]
[connection signal="wurmhole" from="." to="." method="_on_Moon_wurmhole"]
